<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaChat</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to BeaChat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <string name="indication">UP swiping to find near beacons</string>
    <string name="beacon_id">BeaconID:</string>
    <string name="major">MAJOR #:</string>
    <string name="minor">, MINOR #:</string>
    <string name="rssi">, RSSI:</string>
    <string name="tx_pw">, TX_PW:</string>
    <string name="proximity">Proximity:</string>

    <string name="refresh">Refresh beacon List</string>
    <string name="exp">exp </string>
</resources>